add file tree details in Readme.md

--- a/Daily_life/2016/11/05.md
+++ b/Daily_life/2016/11/05.md
@@ -20,3 +20,7 @@ So I choose [BitBucket](bitbucket.org), on which I can create private projects.
 
 After some efforts, I successfully create a project named [Note](https://Hsuning_Ma@bitbucket.org/Hsuning_Ma/note.git).
 What an achievement.
+
+
+##tags
+> `daily life`, `2016`
