--- a/Projects/Project_Delta/07.md
+++ b/Projects/Project_Delta/07.md
@@ -5,11 +5,11 @@ Project_Delta ideas
 
 About the project, some ideas emerged:
 
-  * :math:`$N_p=1$, $N_\pi^0\ge 1$`, record all combinations;
-  * :math:`$N_p=1$, $N_\bar{p}=1$, $N_\pi^0\ge 1$`, record all combinations;
-  * :math:`$N_p=1$, $N_\bar{p}=1$, $N_\pi^0\ge 1$`, keep the miminum $\chi^2$ combinations;
+  * $N_p=1$, $N_\pi^0\ge 1$, record all combinations;
+  * $N_p=1$, $N_\bar{p}=1$, $N_\pi^0\ge 1$, record all combinations;
+  * $N_p=1$, $N_\bar{p}=1$, $N_\pi^0\ge 1$, keep the miminum $\chi^2$ combinations;
   * exclusive reconstruction;
-  * use the inclusive MC of :math:`$J/\psi$` as a reference to determine the backgrounds.
+  * use the inclusive MC of $J/\psi$ as a reference to determine the backgrounds.
 
 Idea 1 has a bad Signal-to-noise ratio. Idea 2 has a bad background. Idea 3 has low efficiencies. While idea 4 has not been test, but according to the situation when test idea 3, the efficiencies will be lower.
 
